# django-static-delivery

./: .gitignore  .python-version  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  advanced.rst  api.rst  api_middleware.rst  conf.py  index.rst  installation.rst  usage.rst
static_delivery/: __init__.py  middleware.py
tests/: settings.py  test_middleware.py
