[tool.poetry]
name = "django-static-delivery"
version = "1.0.0"
description = "A middleware to delivery static files in Django."
authors = [
	"Stephan Jaekel <steph@rdev.info>",
]
license = "MIT"
readme = "README.rst"
homepage = 'https://github.com/stephrdev/django-static-delivery'
repository = 'https://github.com/stephrdev/django-static-delivery'
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
packages = [{ include = "static_delivery" }]
include = ["LICENSE.rst"]

[tool.poetry.dependencies]
python = ">=3.10,<4"

Django = ">=3.2"
Sphinx = {version = ">=3.5", optional = true}
poetry-plugin-export = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
pytest-cov = ">=2.11"
pytest-django = ">=4.2"
pytest-flake8 = ">=1.0"
pytest-isort = ">=2.0"
pytest-black = ">=0.3"
flake8 = "<6"
coverage = {version = ">=5.5", extras = ["toml"]}

[tool.poetry.extras]
docs = ["Sphinx"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --tb=short --nomigrations"
testpaths = ["static_delivery", "tests"]
flake8-max-line-length = 96
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 96
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = "\\.pyi?$"
exclude = "/(\\.git|\\.tox|build|dist)/"

[tool.coverage.run]
branch = true
source = ["static_delivery"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
